--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
       <div class="button">
         <nav>
           <ul>
-            <li><button>Add to Wishlist!</button></li>
-            <li><button>Add to Cart</button></li>
+            <li>
+              <button>Add to Wishlist!</button>
+            </li>
+            <li>
+              <button>Add to Cart</button>
+            </li>
           </ul>
         </nav>
       </div>
@@ -78,6 +82,6 @@
         </nav>
       </div>
     </main>
+    <footer></footer>
   </body>
-  <footer></footer>
 </html>
