--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
     <h2>Average Rating:</h2>
     <meter value="4" min="0" max="5"></meter>
     <div class="button">
-      <a>Add to Wishlist!</a>
-      <a>Add to Cart</a>
+      <a href="">Add to Wishlist!</a>
+      <a href="">Add to Cart</a>
     </div>
     <div class="description">
       <p>You’re an ancient <strong>Egyptian God </strong>competing against the other gods to create the perfect landscape for your subjugated peoples. You and the gods adjust the landscape to best suit your people, building farms, rivers, cities, villages—and places of worship. The god with the best—most loved—landscape wins and claims the whole land.</p>
       <p>
-        Super Epic Tile Layer is a tile-placement game where players draw a random tile and place the piece to continue the beautiful landscape of the Nile and Nile delta. Each tile must seamlessly continue the landscape while getting victory points by claiming important pieces of countryside and locations.
-      </p>
+        Super Epic Tile Layer is a tile-placement game where players draw a random tile and place the piece to continue the beautiful landscape of the Nile and Nile delta. Each tile must seamlessly continue the landscape while getting victory points by claiming important pieces of countryside and locations.</p>
     </div>
     <footer>
       <dl>
